# count-min-sketch-rust

./: Cargo.toml  README.md  index.html
.github/workflows/: bench.yml  release.yml
CMS_Distribution_Comparison/W65536xD8/report/: index.html
CMS_Distribution_Comparison/report/: index.html
CMS_Error_Measurement/report/: index.html
CountMinSketch_Performance/Incremental_Update/report/: index.html
Incremental_Update/W1024xD4/base/: estimates.json  tukey.json
Incremental_Update/W1024xD4/new/: sample.json
Incremental_Update/W1024xD4/report/: index.html
Incremental_Update/W1048576xD16/base/: estimates.json  tukey.json
Incremental_Update/W1048576xD16/new/: benchmark.json  sample.json
Incremental_Update/W1048576xD16/report/: index.html
Incremental_Update/W65536xD8/base/: estimates.json  sample.json  tukey.json
Incremental_Update/W65536xD8/report/: index.html
RelativeError/W1024D4_ARE_942.1412/base/: sample.json
RelativeError/W1024D4_ARE_942.1412/new/: estimates.json  tukey.json
RelativeError/W1024D4_ARE_942.1412/report/: index.html
RelativeError/W1048576D16_ARE_0.0004/base/: benchmark.json  sample.json  tukey.json
RelativeError/W1048576D16_ARE_0.0004/new/: estimates.json
RelativeError/W1048576D16_ARE_0.0004/report/: index.html
RelativeError/W65536D8_ARE_9.9369/base/: benchmark.json
RelativeError/W65536D8_ARE_9.9369/new/: estimates.json  sample.json  tukey.json
RelativeError/report/: index.html
benches/: cms_bench.rs  cms_error.rs
report/: index.html
src/: lib.rs
tests/: cms_comparison_test.rs  cms_test.rs
(+70 files in other folders)
